# engram

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  benchmark.py  langchain_integration.py
scripts/: push_to_github.sh
src/engram/: __init__.py  agent_memory.py  config.py  exceptions.py
src/engram/consolidation/: __init__.py  sleep.py
src/engram/embedding/: __init__.py  base.py  noop.py  openai_embedding.py  sentence_transformers_embedding.py
src/engram/emotion/: __init__.py
src/engram/mcp_server/: __init__.py  server.py
src/engram/memory/: __init__.py  enums.py  item.py
src/engram/pipeline/: __init__.py  long_term_memory.py  sensory_buffer.py  working_memory.py
src/engram/retrieval/: __init__.py  associative.py  hybrid.py
src/engram/storage/: __init__.py  base.py  chromadb.py  in_memory.py  registry.py  sqlite.py
src/engram/utils/: __init__.py
src/memore/: __init__.py  agent_memory.py  config.py  exceptions.py
src/memore/consolidation/: __init__.py  sleep.py
src/memore/embedding/: __init__.py  base.py  noop.py  openai_embedding.py  sentence_transformers_embedding.py
src/memore/emotion/: __init__.py  tag.py
src/memore/mcp_server/: __init__.py  server.py
src/memore/memory/: __init__.py  decay.py  enums.py  importance.py  item.py
src/memore/pipeline/: __init__.py  long_term_memory.py  sensory_buffer.py  working_memory.py
src/memore/retrieval/: __init__.py  associative.py  hybrid.py
src/memore/storage/: __init__.py  base.py  chromadb.py  in_memory.py  registry.py  sqlite.py
src/memore/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_agent_memory.py  test_sqlite_backend.py  test_storage_backend.py
tests/unit/: test_decay.py  test_emotional_tagger.py  test_hybrid_ranker.py  test_memory_item.py  test_sensory_buffer.py  test_sleep_consolidation.py  test_working_memory.py
