[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0a1"
description = "Biomimetic memory system for AI agents — sensory, working, episodic, semantic, and procedural memory with forgetting curves, consolidation, and associative retrieval."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["memory", "ai-agent", "llm", "biomimetic", "forgetting-curve", "semantic-search"]

authors = [
    {name = "j7294371-gif", email = "j7294371@gmail.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific Computing :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
sqlite = []
chromadb = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.9.0"]
pgvector = ["psycopg2-binary>=2.9", "sqlalchemy>=2.0"]
embeddings = ["sentence-transformers>=2.2", "numpy>=1.24"]
openai = ["openai>=1.0"]
all = [
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
engram-mcp = "engram.mcp_server:main"

[project.urls]
Homepage = "https://github.com/engram-memory/engram"
Repository = "https://github.com/engram-memory/engram"
Documentation = "https://github.com/j7294371-gif/engram"

[tool.setuptools.packages.find]
where = ["src"]
include = ["engram*"]

[tool.setuptools.package-data]
engram = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["SIM117"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_unused_configs = true
disallow_any_unimported = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/engram"]
